Onclick routing for movies works

--- a/src/app/movies/movies-container/movies-container.component.html
+++ b/src/app/movies/movies-container/movies-container.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="example-container">
-  <mat-drawer mode="side" opened="true" class="example-sidenav">
-    <!-- <movies-list (rowClick)="onRowClick($event)"> -->
-      <movies-list>
+  <mat-drawer mode="side" opened="true" class="example-sidenav-content">
+    <movies-list (rowClick)="onRowClick($event)">
+      <!-- <movies-list> -->
     </movies-list>
   </mat-drawer>
   <mat-drawer-content>
