--- a/src/app/movies/movies-container/movies-container.component.scss
+++ b/src/app/movies/movies-container/movies-container.component.scss
@@ -1,6 +1,7 @@
 .example-container {
-    width: 40vw;
-    height: 100vh;
+    min-width: 500px;
+    width: 200px;
+    height: 80%;
     border: 1px solid rgba(0, 0, 0, 0.5);
   }
   
