Slight additions to routing

--- a/src/app/movies/movies-container/movies-container.component.scss
+++ b/src/app/movies/movies-container/movies-container.component.scss
@@ -1,7 +1,6 @@
 .example-container {
-    min-width: 500px;
-    width: 200px;
-    height: 80%;
+    width: 600px;
+    height: 300px;
     border: 1px solid rgba(0, 0, 0, 0.5);
   }
   
