--- a/src/app/movies/movies-container/movies-container.component.scss
+++ b/src/app/movies/movies-container/movies-container.component.scss
@@ -1,6 +1,6 @@
 .example-container {
-    width: 600px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     border: 1px solid rgba(0, 0, 0, 0.5);
   }
   
